Add some analysis to specific columns to discuss with group

--- a/exploratory_data_analysis.ipynb
+++ b/exploratory_data_analysis.ipynb
@@ -33,6 +33,7 @@
     "from src.constants import (\n",
     "    NEW_COLUMNS_NAMES,\n",
     "    REMOVE_COLUMNS_BY_INPUT,\n",
+    "    REMOVE_COLUMNS_BY_CORRELATIONS,\n",
     "    NUM_VARIABLES_TO_SEE_DISTRIBUTION,\n",
     "    BINARY_VARIABLES,\n",
     "    IDEALISTA_COLORS\n",
@@ -53,7 +54,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "%matplotlib inline\n",
     "pd.set_option('display.max_columns', None)\n",
-    "pd.set_option('display.max_rows', None)"
+    "# pd.set_option('display.max_rows', None)"
    ]
   },
   {
@@ -269,8 +270,8 @@
     "                                   'precio_unitario_m2':['median', 'mean', 'std']}).reset_index()\n",
     "\n",
     "df_metrics_barrios.columns = ['barrio', \n",
-    "                         'precio_median', 'precio_mean', 'precio_std', \n",
-    "                         'precio_unitario_m2_median', 'precio_unitario_m2_mean', 'precio_unitario_m2_std']"
+    "                         'precio_median_barrio', 'precio_mean_barrio', 'precio_std_barrio', \n",
+    "                         'precio_unitario_m2_median_barrio', 'precio_unitario_m2_mean_barrio', 'precio_unitario_m2_std_barrio']"
    ]
   },
   {
@@ -280,8 +281,27 @@
    "outputs": [],
    "source": [
     "# Add mean price by barrio to dataset\n",
-    "# FIXME\n",
-    "df_assets_test=df_assets.merge(df_metrics_barrios[['barrio', 'precio_mean', 'precio_unitario_m2_mean']], on=['barrio'], how=\"inner\")"
+    "df_assets=df_assets.merge(df_metrics_barrios[['barrio', 'precio_mean_barrio', 'precio_unitario_m2_mean_barrio']], on=['barrio'], how=\"inner\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove this observation because it is a outlier: seen in graph in section \"coordenadas\"\n",
+    "df_assets = df_assets[df_assets['latitud'] >= 37]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove columns by high correlations\n",
+    "df_assets = df_assets.drop(columns=REMOVE_COLUMNS_BY_CORRELATIONS)"
    ]
   },
   {
@@ -299,6 +319,157 @@
     "\n",
     "print(\"Columns added:\", add_columns)\n",
     "print('Columns removed by adding new:', remove_columns_by_creating_new_variables)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TODO:\n",
+    "* Baños 0: Intentar imputar el numero de baños por el número de baño médio por metro cuadrado?\n",
+    "* Duplex: Hacer analysis de como es de distincto el precio entre casas duplex y no duplex\n",
+    "* Estudio: \n",
+    "    1. Hacer analysis de como es de distincto el precio entre casas estudio y no estudio\n",
+    "    2. Mirar el numero de habitaciones de los estudios  \n",
+    "* Precio Parking:\n",
+    "    1. Validar el sentido de una casa sin parking tener precio del parking > 0 \n",
+    "    2. Validar porque todos los parking têm precio 1 y no 0\n",
+    "* Orientaciones: hay casas sin ninguna orientacion y no son solo interiores. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "N_Banos: Impute values when n_banos = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter rows where n_banos > 0\n",
+    "filtered_df = df_assets[df_assets['n_banos'] > 0]\n",
+    "\n",
+    "# Calculate number of bathrooms per square meter\n",
+    "filtered_df['n_banos_m2'] = filtered_df['n_banos'] / filtered_df['area_construida']\n",
+    "\n",
+    "# Calculate mean number of bathrooms per square meter\n",
+    "mean_bathrooms_per_sqm = filtered_df['n_banos_m2'].mean()\n",
+    "\n",
+    "# Impute number of bathrooms for rows where n_banos == 0: mean number of bath by m^2 * m^2, rounded, and minimum 1\n",
+    "df_assets['n_banos_m2'] = (np.maximum(mean_bathrooms_per_sqm * df_assets['area_construida'],1)).round().astype(int)\n",
+    "\n",
+    "# Validate if it is a good way to values, calculating mape comparing with the real n_banos\n",
+    "df_assets_aux = df_assets[df_assets['n_banos']>0]\n",
+    "absolute_percentage_errors = np.abs((df_assets_aux['n_banos'] - df_assets_aux['n_banos_m2']) / df_assets_aux['n_banos'])\n",
+    "mape = np.mean(absolute_percentage_errors) * 100\n",
+    "print(\"MAPE\", mape)\n",
+    "\n",
+    "# Delete filtered_df, df_assets_aux as they are only auxiliar \n",
+    "del filtered_df, df_assets_aux\n",
+    "\n",
+    "# Assign the imputed value to n_banos where n_banos == 0\n",
+    "df_assets.loc[df_assets['n_banos'] == 0, 'n_banos'] = df_assets.loc[df_assets['n_banos'] == 0, 'n_banos_m2']\n",
+    "\n",
+    "# # Drop the n_banos_m2 column as it is no longer needed\n",
+    "df_assets = df_assets.drop(columns=['n_banos_m2'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# UTIL\n",
+    "df_assets.to_csv(r'output_data\\df_util.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Duplex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate mean price for duplex and non-duplex houses\n",
+    "mean_price_duplex = df_assets[df_assets.duplex==1]['precio'].mean()\n",
+    "mean_price_no_duplex = df_assets[df_assets.duplex!=1]['precio'].mean()\n",
+    "print('Duplex prices are, in average,', round(mean_price_duplex/mean_price_no_duplex,2), 'times the price of a non duplex house')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Studio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate mean price for duplex and non-duplex houses\n",
+    "mean_price_estudio = df_assets[df_assets.estudio==1]['precio'].mean()\n",
+    "mean_price_no_estudio = df_assets[df_assets.estudio!=1]['precio'].mean()\n",
+    "print('Studio prices are, in average,', round(mean_price_estudio/mean_price_no_estudio,2), 'times the price of a non studio house')\n",
+    "\n",
+    "print('Studios distinct number of bathrooms:', \n",
+    "      df_assets[df_assets.estudio==1][['n_banos']].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Precio Parking\n",
+    "\n",
+    "    1. si precio_parking>1 --> parking = 1 \n",
+    "    2. si parking==0 --> precio_parking = 0 \n",
+    "    \n",
+    "Validar porque tenemos precio_parking = 1 cuando parking = 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_assets.loc[(df_assets['parking'] == 0) & (df_assets['precio_parking'] > 1), 'precio_parking'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Orientaciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the sum of all orientations to see if we have information about orientation of all houses\n",
+    "df_assets['orientacion_total'] = df_assets.orientacion_s+df_assets.orientacion_e+df_assets.orientacion_n+df_assets.orientacion_o\n",
+    "\n",
+    "# Create a cross-tabulation between 'orientacion_total' and 'interior'\n",
+    "cross_tab = pd.crosstab(df_assets['orientacion_total'], df_assets['interior'])\n",
+    "print('Compare total orientation with if is an interior house or not')\n",
+    "print(cross_tab)"
    ]
   },
   {
@@ -334,6 +505,34 @@
     "# visualize_distribution(\n",
     "#     df=df_assets, numerical_columns=NUM_VARIABLES_TO_SEE_DISTRIBUTION\n",
     "# )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mean average price duplex vs non duplex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a bar plot\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "bars = plt.bar(['Duplex', 'Non-Duplex'], [mean_price_duplex, mean_price_no_duplex], color=['blue', 'orange'])\n",
+    "\n",
+    "# Add labels to each bar\n",
+    "for bar in bars:\n",
+    "    yval = bar.get_height()\n",
+    "    plt.text(bar.get_x() + bar.get_width()/2, yval, round(yval, 0).astype(int), va='bottom')\n",
+    "\n",
+    "plt.xlabel('House Type')\n",
+    "plt.ylabel('Mean Price')\n",
+    "plt.title('Mean Price Comparison between Duplex and Non-Duplex Houses')\n",
+    "plt.show()"
    ]
   },
   {
@@ -458,9 +657,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove this observation because it is a clear outlier \n",
-    "df_assets = df_assets[df_assets['latitud'] >= 37]\n",
-    "\n",
     "# Price Total €\n",
     "cm = plt.cm.get_cmap('magma')  # or your colormap of choice\n",
     "ax = df_assets.plot.scatter(x='longitud', y='latitud', c='precio',figsize=(10, 10), cmap=cm)\n",
