Add changes in exploratory_d_a notebbok

--- a/exploratory_data_analysis.ipynb
+++ b/exploratory_data_analysis.ipynb
@@ -47,6 +47,7 @@
     "    visualize_binary_distribution,\n",
     "    correlation_values,\n",
     "    feature_engineering,\n",
+    "    detect_outliers,\n",
     "    get_location_name_w_gdf,\n",
     ")\n",
     "\n",
@@ -322,6 +323,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_assets = df_assets[df_assets.status_inmueble!=1] "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -385,7 +395,7 @@
    "outputs": [],
    "source": [
     "# UTIL\n",
-    "df_assets.to_csv(r'output_data\\df_util.csv')"
+    "df_assets.to_csv(r'output_data\\df_util.csv', index=False)"
    ]
   },
   {
@@ -476,6 +486,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analyse target outliers\n",
+    "outliers = detect_outliers(df_assets, 'precio')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Correlations"
    ]
   },
@@ -504,7 +531,23 @@
    "source": [
     "# visualize_distribution(\n",
     "#     df=df_assets, numerical_columns=NUM_VARIABLES_TO_SEE_DISTRIBUTION\n",
-    "# )\n"
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pairwise relationships and distributions between multiple variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.pairplot(df_assets[NUM_VARIABLES_TO_SEE_DISTRIBUTION],diag_kind='kde')"
    ]
   },
   {
@@ -642,6 +685,36 @@
     "plt.xticks(rotation=90)\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Box Plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot horizontal boxplot with price in millions\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.boxplot(data=df_assets, x=df_assets['precio'])\n",
+    "plt.title('Box plot')\n",
+    "plt.xlabel('Price')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 30))\n",
+    "sns.boxplot(data=df_assets, x=\"area_construida\", y=\"barrio\")"
    ]
   },
   {
