ADd modelizacion draft and new eda

--- a/modelization.ipynb
+++ b/modelization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +18,421 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_assets = pd.read_csv(r'output_data/df_util.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>precio</th>\n",
+       "      <th>precio_unitario_m2</th>\n",
+       "      <th>area_construida</th>\n",
+       "      <th>n_habitaciones</th>\n",
+       "      <th>n_banos</th>\n",
+       "      <th>terraza</th>\n",
+       "      <th>ascensor</th>\n",
+       "      <th>aire_acondicionado</th>\n",
+       "      <th>amueblado</th>\n",
+       "      <th>parking</th>\n",
+       "      <th>...</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>precio_logaritmico</th>\n",
+       "      <th>cusec</th>\n",
+       "      <th>barrio_id</th>\n",
+       "      <th>barrio</th>\n",
+       "      <th>precio_mean_barrio</th>\n",
+       "      <th>precio_unitario_m2_mean_barrio</th>\n",
+       "      <th>interior</th>\n",
+       "      <th>status_inmueble</th>\n",
+       "      <th>antiguidade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>126000</td>\n",
+       "      <td>2680.85</td>\n",
+       "      <td>47</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>POINT (-3.76693282740492 40.3624847687389)</td>\n",
+       "      <td>11.74</td>\n",
+       "      <td>2807911190</td>\n",
+       "      <td>0-EU-ES-28-07-001-079-11-008</td>\n",
+       "      <td>Pau de Carabanchel</td>\n",
+       "      <td>244908.70</td>\n",
+       "      <td>2848.05</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>235000</td>\n",
+       "      <td>4351.85</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>POINT (-3.71072465730388 40.4224298907482)</td>\n",
+       "      <td>12.37</td>\n",
+       "      <td>2807901002</td>\n",
+       "      <td>0-EU-ES-28-07-001-079-01-001</td>\n",
+       "      <td>Palacio</td>\n",
+       "      <td>486195.70</td>\n",
+       "      <td>4832.30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>118.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>373000</td>\n",
+       "      <td>4973.33</td>\n",
+       "      <td>75</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>POINT (-3.711570866261 40.4221904507903)</td>\n",
+       "      <td>12.83</td>\n",
+       "      <td>2807901002</td>\n",
+       "      <td>0-EU-ES-28-07-001-079-01-001</td>\n",
+       "      <td>Palacio</td>\n",
+       "      <td>486195.70</td>\n",
+       "      <td>4832.30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>103.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>228000</td>\n",
+       "      <td>4560.00</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>POINT (-3.71434022421324 40.4087408924555)</td>\n",
+       "      <td>12.34</td>\n",
+       "      <td>2807901020</td>\n",
+       "      <td>0-EU-ES-28-07-001-079-01-001</td>\n",
+       "      <td>Palacio</td>\n",
+       "      <td>486195.70</td>\n",
+       "      <td>4832.30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>88.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>498000</td>\n",
+       "      <td>3921.26</td>\n",
+       "      <td>127</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>POINT (-3.70752185145011 40.4126386908556)</td>\n",
+       "      <td>13.12</td>\n",
+       "      <td>2807901025</td>\n",
+       "      <td>0-EU-ES-28-07-001-079-01-002</td>\n",
+       "      <td>Lavapiés-Embajadores</td>\n",
+       "      <td>293470.48</td>\n",
+       "      <td>4382.70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>118.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66960</th>\n",
+       "      <td>347000</td>\n",
+       "      <td>3017.39</td>\n",
+       "      <td>115</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>POINT (-3.59215415596941 40.4458098008725)</td>\n",
+       "      <td>12.76</td>\n",
+       "      <td>2807920116</td>\n",
+       "      <td>0-EU-ES-28-07-001-079-20-006</td>\n",
+       "      <td>Rejas</td>\n",
+       "      <td>274074.81</td>\n",
+       "      <td>2955.40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66961</th>\n",
+       "      <td>311000</td>\n",
+       "      <td>3344.09</td>\n",
+       "      <td>93</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>POINT (-3.58937606020609 40.4450131853889)</td>\n",
+       "      <td>12.65</td>\n",
+       "      <td>2807920121</td>\n",
+       "      <td>0-EU-ES-28-07-001-079-20-006</td>\n",
+       "      <td>Rejas</td>\n",
+       "      <td>274074.81</td>\n",
+       "      <td>2955.40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66962</th>\n",
+       "      <td>342000</td>\n",
+       "      <td>2826.45</td>\n",
+       "      <td>121</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>POINT (-3.57627149326686 40.4431963663667)</td>\n",
+       "      <td>12.74</td>\n",
+       "      <td>2807920120</td>\n",
+       "      <td>0-EU-ES-28-07-001-079-20-006</td>\n",
+       "      <td>Rejas</td>\n",
+       "      <td>274074.81</td>\n",
+       "      <td>2955.40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66963</th>\n",
+       "      <td>146000</td>\n",
+       "      <td>2354.84</td>\n",
+       "      <td>62</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>POINT (-3.60869398447231 40.4479311037453)</td>\n",
+       "      <td>11.89</td>\n",
+       "      <td>2807920091</td>\n",
+       "      <td>0-EU-ES-28-07-001-079-20-007</td>\n",
+       "      <td>Canillejas</td>\n",
+       "      <td>186916.88</td>\n",
+       "      <td>2204.26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>48.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66964</th>\n",
+       "      <td>334000</td>\n",
+       "      <td>3591.40</td>\n",
+       "      <td>93</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>POINT (-3.5850557635324 40.4580982139573)</td>\n",
+       "      <td>12.72</td>\n",
+       "      <td>2807921008</td>\n",
+       "      <td>0-EU-ES-28-07-001-079-21-001</td>\n",
+       "      <td>Alameda de Osuna</td>\n",
+       "      <td>374688.60</td>\n",
+       "      <td>3206.35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>46.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>66965 rows × 42 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       precio  precio_unitario_m2  area_construida  n_habitaciones  n_banos  \\\n",
+       "0      126000             2680.85               47               1        1   \n",
+       "1      235000             4351.85               54               1        1   \n",
+       "2      373000             4973.33               75               2        1   \n",
+       "3      228000             4560.00               50               0        1   \n",
+       "4      498000             3921.26              127               3        2   \n",
+       "...       ...                 ...              ...             ...      ...   \n",
+       "66960  347000             3017.39              115               3        2   \n",
+       "66961  311000             3344.09               93               2        2   \n",
+       "66962  342000             2826.45              121               2        2   \n",
+       "66963  146000             2354.84               62               3        1   \n",
+       "66964  334000             3591.40               93               3        1   \n",
+       "\n",
+       "       terraza  ascensor  aire_acondicionado  amueblado  parking  ...  \\\n",
+       "0            0         1                   1          3        0  ...   \n",
+       "1            0         0                   0          3        0  ...   \n",
+       "2            0         0                   1          3        0  ...   \n",
+       "3            0         0                   0          3        0  ...   \n",
+       "4            0         1                   0          3        0  ...   \n",
+       "...        ...       ...                 ...        ...      ...  ...   \n",
+       "66960        1         1                   1          3        1  ...   \n",
+       "66961        0         1                   1          3        1  ...   \n",
+       "66962        1         1                   1          2        1  ...   \n",
+       "66963        0         0                   0          2        0  ...   \n",
+       "66964        1         1                   1          3        0  ...   \n",
+       "\n",
+       "                                         geometry  precio_logaritmico  \\\n",
+       "0      POINT (-3.76693282740492 40.3624847687389)               11.74   \n",
+       "1      POINT (-3.71072465730388 40.4224298907482)               12.37   \n",
+       "2        POINT (-3.711570866261 40.4221904507903)               12.83   \n",
+       "3      POINT (-3.71434022421324 40.4087408924555)               12.34   \n",
+       "4      POINT (-3.70752185145011 40.4126386908556)               13.12   \n",
+       "...                                           ...                 ...   \n",
+       "66960  POINT (-3.59215415596941 40.4458098008725)               12.76   \n",
+       "66961  POINT (-3.58937606020609 40.4450131853889)               12.65   \n",
+       "66962  POINT (-3.57627149326686 40.4431963663667)               12.74   \n",
+       "66963  POINT (-3.60869398447231 40.4479311037453)               11.89   \n",
+       "66964   POINT (-3.5850557635324 40.4580982139573)               12.72   \n",
+       "\n",
+       "            cusec                     barrio_id                barrio  \\\n",
+       "0      2807911190  0-EU-ES-28-07-001-079-11-008    Pau de Carabanchel   \n",
+       "1      2807901002  0-EU-ES-28-07-001-079-01-001               Palacio   \n",
+       "2      2807901002  0-EU-ES-28-07-001-079-01-001               Palacio   \n",
+       "3      2807901020  0-EU-ES-28-07-001-079-01-001               Palacio   \n",
+       "4      2807901025  0-EU-ES-28-07-001-079-01-002  Lavapiés-Embajadores   \n",
+       "...           ...                           ...                   ...   \n",
+       "66960  2807920116  0-EU-ES-28-07-001-079-20-006                 Rejas   \n",
+       "66961  2807920121  0-EU-ES-28-07-001-079-20-006                 Rejas   \n",
+       "66962  2807920120  0-EU-ES-28-07-001-079-20-006                 Rejas   \n",
+       "66963  2807920091  0-EU-ES-28-07-001-079-20-007            Canillejas   \n",
+       "66964  2807921008  0-EU-ES-28-07-001-079-21-001      Alameda de Osuna   \n",
+       "\n",
+       "       precio_mean_barrio  precio_unitario_m2_mean_barrio  interior  \\\n",
+       "0               244908.70                         2848.05         1   \n",
+       "1               486195.70                         4832.30         0   \n",
+       "2               486195.70                         4832.30         1   \n",
+       "3               486195.70                         4832.30         1   \n",
+       "4               293470.48                         4382.70         1   \n",
+       "...                   ...                             ...       ...   \n",
+       "66960           274074.81                         2955.40         1   \n",
+       "66961           274074.81                         2955.40         1   \n",
+       "66962           274074.81                         2955.40         1   \n",
+       "66963           186916.88                         2204.26         0   \n",
+       "66964           374688.60                         3206.35         1   \n",
+       "\n",
+       "       status_inmueble  antiguidade  \n",
+       "0                    3        13.00  \n",
+       "1                    2       118.00  \n",
+       "2                    2       103.00  \n",
+       "3                    2        88.00  \n",
+       "4                    3       118.00  \n",
+       "...                ...          ...  \n",
+       "66960                2         9.00  \n",
+       "66961                2        11.00  \n",
+       "66962                2        13.00  \n",
+       "66963                2        48.00  \n",
+       "66964                2        46.00  \n",
+       "\n",
+       "[66965 rows x 42 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_assets"
    ]
   },
   {
@@ -69,7 +479,7 @@
     }
    ],
    "source": [
-    "# Call the calculate_metrics function\n",
+    "# Call the calculate_metrics function: DF_TRAIN!!\n",
     "metrics, df_test_with_metrics = calculate_metrics(df_test['precio'], df_test['precio_mean_barrio'], df_test)\n",
     "\n",
     "# Print the calculated metrics\n",
@@ -321,6 +731,7 @@
     }
    ],
    "source": [
+    "#dividir por bairro\n",
     "metrics_df=metrics_df.transpose()\n",
     "metrics_df"
    ]
@@ -400,7 +811,8 @@
     }
    ],
    "source": [
-    "metrics_df"
+    "metrics_df\n",
+    "#TODO: add variables median perc error, %cases with error>0,05, etc "
    ]
   },
   {
