--- a/exploratory_data_analysis.ipynb
+++ b/exploratory_data_analysis.ipynb
@@ -448,11 +448,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train.to_csv(r'C:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\output_data\\df_train_util.csv', index=False)"
+    "df_train.to_csv(r'output_data\\df_train_util.csv', index=False)"
    ]
   },
   {
@@ -461,7 +461,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test.fillna(0).to_csv(r'C:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\output_data\\df_test_util.csv', index=False)"
+    "df_test.fillna(0).to_csv(r'output_data\\df_test_util.csv', index=False)"
    ]
   },
   {
